---
title: ResBack - Authentication, Accounts and Profiles
---
classDiagram
    direction TB

    class LoginController {
        <<authentication>>
        +showLoginForm() View
        +login(Request request) RedirectResponse
        +logout(Request request) RedirectResponse
    }
    class RegisterController {
        <<registration>>
        +showRegistrationForm() View
        +register(Request request) RedirectResponse
    }
    class HomeController {
        <<role-based navigation>>
        +__invoke(Request request) RedirectResponse
    }
    class AccountController {
        <<account management>>
        +index() View
        +updateRole(Request request, User user) RedirectResponse
        +toggleStatus(Request request, User user) RedirectResponse
        +destroy(Request request, User user) RedirectResponse
    }
    class ProfileController {
        <<names and profile photos>>
        +edit() View
        +update(Request request) RedirectResponse
    }
    class User {
        <<shared model - selected members>>
        +string name
        +string email
        +string password
        +string role
        +bool is_active
        +string? profile_photo_path
        +isAdmin() bool
        +isSuperAdmin() bool
        +isFaculty() bool
        +isStudent() bool
    }

    LoginController ..> User : authenticates via Auth
    RegisterController ..> User : creates student account
    HomeController ..> User : reads authenticated role
    AccountController ..> User : manages role and account status
    ProfileController ..> User : updates names and photo

%% Feature stereotypes are explanatory labels, not PHP namespaces or subclasses.
%% All controllers extend the application's Controller; inheritance is omitted.
%% Dashed arrows show dependencies, not user-flow transitions or multiplicities.
%% LoginController uses Laravel Auth and the authenticated request User.
%% HomeController reads User.role and redirects to a route; it does not invoke
%% DashboardController or FeedbackController directly.
%% ProfileController edits names and photo only; no email/password editing exists.
%% User shows selected dynamic Eloquent properties; see the core class diagram.
%% Registration always assigns student. Role values are not separate classes.
%% Source: app/Http/Controllers, app/Models/User.php and routes/web.php; 2026-09-24.
